--- a/analiseficha.html
+++ b/analiseficha.html
@@ -14,7 +14,7 @@
   --danger:#dc2626;
   --success:#16a34a;
   --bg:#f8fafc;
-  --card:#fff;
+  --card:#ffffff;
 }
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter;background:var(--bg)}
@@ -22,75 +22,76 @@ body{margin:0;font-family:Inter;background:var(--bg)}
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(340px,1fr));
-  gap:20px;
-  padding:20px;
+  gap:22px;
+  padding:22px;
 }
-
 .card{
   background:var(--card);
-  border-radius:20px;
-  box-shadow:0 15px 35px rgba(0,0,0,.08);
+  border-radius:24px;
+  box-shadow:0 18px 40px rgba(0,0,0,.08);
   overflow:hidden;
+  cursor:pointer;
 }
-.card img{width:100%;height:180px;object-fit:cover}
+.card img{
+  width:100%;
+  height:180px;
+  object-fit:cover;
+}
 .body{padding:16px}
-
 .badge{
   display:inline-block;
-  background:#e0f2fe;
   padding:6px 12px;
   border-radius:999px;
+  background:#e0f2fe;
   font-size:12px;
-  font-weight:700;
+  font-weight:800;
   margin-right:6px;
 }
 
-.ing{
-  display:flex;
-  justify-content:space-between;
-  font-size:13px;
-  margin-top:6px;
-}
-
-button{
-  border:none;
-  border-radius:12px;
-  padding:10px 14px;
-  font-weight:800;
-  cursor:pointer;
-}
-.btn-edit{background:var(--primary);color:#fff}
-.btn-del{background:var(--danger);color:#fff}
-
+/* MODAL */
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.4);
+  background:rgba(0,0,0,.55);
   display:none;
   align-items:center;
   justify-content:center;
+  z-index:10;
 }
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:520px;
-  border-radius:20px;
-  padding:20px;
+  max-width:760px;
+  border-radius:28px;
+  overflow:hidden;
+  animation:pop .2s ease;
 }
-.modal-box h2{margin-top:0}
-.modal-box input{
+@keyframes pop{from{transform:scale(.95);opacity:0}to{transform:scale(1);opacity:1}}
+.modal-img{
   width:100%;
-  padding:12px;
-  border-radius:12px;
-  border:1px solid #cbd5e1;
-  margin-bottom:10px;
+  height:260px;
+  object-fit:cover;
 }
-.row{
+.modal-body{
+  padding:22px;
+}
+.ing{
   display:grid;
-  grid-template-columns:1fr auto;
-  gap:10px;
-  align-items:center;
+  grid-template-columns:1fr auto auto;
+  gap:12px;
+  font-size:14px;
+  margin-top:10px;
 }
+.ing strong{white-space:nowrap}
+.close{
+  position:absolute;
+  top:14px;
+  right:18px;
+  font-size:22px;
+  cursor:pointer;
+}
+.lucro.pos{color:var(--success);font-weight:900}
+.lucro.neg{color:var(--danger);font-weight:900}
 </style>
 </head>
 
@@ -98,20 +99,12 @@ button{
 
 <div id="cards" class="grid"></div>
 
-<!-- MODAL EDIÇÃO -->
-<div id="modal" class="modal">
-  <div class="modal-box">
-    <h2>Editar ficha</h2>
-
-    <input id="e_nome" placeholder="Nome">
-    <input id="e_preco" placeholder="Preço de venda">
-    <input id="e_tipo" placeholder="Tipo">
-
-    <h3>Ingredientes</h3>
-    <div id="itens"></div>
-
-    <button class="btn-edit" onclick="salvar()">Salvar</button>
-    <button class="btn-del" onclick="fechar()">Cancelar</button>
+<!-- MODAL -->
+<div id="modal" class="modal" onclick="fechar()">
+  <div class="modal-box" onclick="event.stopPropagation()">
+    <span class="close" onclick="fechar()">✕</span>
+    <img id="mFoto" class="modal-img">
+    <div class="modal-body" id="mBody"></div>
   </div>
 </div>
 
@@ -121,98 +114,81 @@ const sb = supabase.createClient(
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
-let fichaAtual = null;
+const moeda = v =>
+  "R$ " + Number(v || 0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-async function load(){
-  const { data } = await sb.from("buffet").select("*");
-  cards.innerHTML = "";
-  data.forEach(render);
-}
-
-async function render(f){
-  const { data: itens } = await sb
-    .from("buffet_itens")
+/* LOAD */
+(async()=>{
+  const { data } = await sb
+    .from("buffet")
     .select("*")
-    .eq("buffet_id", f.id);
+    .order("created_at",{ascending:false});
 
+  data.forEach(renderCard);
+})();
+
+function renderCard(f){
   const c = document.createElement("div");
   c.className = "card";
+  c.onclick = ()=>abrir(f);
+
   c.innerHTML = `
     ${f.foto_url ? `<img src="${f.foto_url}">` : ``}
     <div class="body">
       <h3>${f.nome}</h3>
       <span class="badge">${f.tipo}</span>
-      <span class="badge">Venda R$ ${f.preco_venda}</span>
-      <span class="badge">CMV R$ ${f.custo_unitario}</span>
-
-      ${itens.map(i=>`
-        <div class="ing">
-          <span>${i.nome}</span>
-          <strong>R$ ${i.custo_calculado}</strong>
-        </div>
-      `).join("")}
-
-      <br>
-      <button class="btn-edit" onclick='editar(${JSON.stringify(f)})'>Editar</button>
-      <button class="btn-del" onclick="excluir('${f.id}')">Excluir</button>
+      <span class="badge">Venda ${moeda(f.preco_venda)}</span>
+      <span class="badge">CMV ${moeda(f.custo_unitario)}</span>
     </div>
   `;
   cards.appendChild(c);
 }
 
-async function editar(f){
-  fichaAtual = f;
+async function abrir(f){
   modal.style.display = "flex";
+  mFoto.src = f.foto_url || "";
 
-  e_nome.value = f.nome;
-  e_preco.value = f.preco_venda;
-  e_tipo.value = f.tipo;
-
-  const { data } = await sb
+  const { data: itens } = await sb
     .from("buffet_itens")
     .select("*")
     .eq("buffet_id", f.id);
 
-  itens.innerHTML = "";
-  data.forEach(i=>{
-    itens.innerHTML += `
-      <div class="row">
-        <input value="${i.nome}">
-        <button class="btn-del" onclick="delItem('${i.id}')">X</button>
+  const cmvTotal = itens.reduce(
+    (s,i)=> s + Number(i.custo_calculado || 0), 0
+  );
+
+  const lucro = (f.preco_venda || 0) - cmvTotal;
+
+  mBody.innerHTML = `
+    <h2>${f.nome}</h2>
+    <p><b>Tipo:</b> ${f.tipo}</p>
+    <p><b>Preço de venda:</b> ${moeda(f.preco_venda)}</p>
+    <p><b>CMV total:</b> ${moeda(cmvTotal)}</p>
+
+    <hr>
+    <h3>Ingredientes</h3>
+
+    ${itens.map(i=>`
+      <div class="ing">
+        <span>
+          ${i.nome}<br>
+          <small>${i.quantidade} ${i.unidade_uso}</small>
+        </span>
+        <span>${moeda(i.custo_unitario)}</span>
+        <strong>${moeda(i.custo_calculado)}</strong>
       </div>
-    `;
-  });
-}
+    `).join("")}
 
-async function salvar(){
-  await sb.from("buffet")
-    .update({
-      nome: e_nome.value,
-      preco_venda: e_preco.value,
-      tipo: e_tipo.value
-    })
-    .eq("id", fichaAtual.id);
-
-  fechar();
-  load();
-}
-
-async function excluir(id){
-  if(!confirm("Excluir ficha?")) return;
-  await sb.from("buffet").delete().eq("id", id);
-  load();
-}
-
-async function delItem(id){
-  await sb.from("buffet_itens").delete().eq("id", id);
-  editar(fichaAtual);
+    <hr>
+    <div class="lucro ${lucro >= 0 ? "pos":"neg"}">
+      Lucro por receita: ${moeda(lucro)}
+    </div>
+  `;
 }
 
 function fechar(){
   modal.style.display = "none";
 }
-
-load();
 </script>
 
 </body>
