--- a/analiseficha.html
+++ b/analiseficha.html
@@ -11,14 +11,17 @@
 <style>
 :root{
   --primary:#2563eb;
-  --danger:#dc2626;
   --success:#16a34a;
+  --danger:#dc2626;
   --bg:#f8fafc;
   --card:#ffffff;
 }
 *{box-sizing:border-box}
-body{margin:0;font-family:Inter;background:var(--bg)}
-
+body{
+  margin:0;
+  font-family:Inter,sans-serif;
+  background:var(--bg);
+}
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(340px,1fr));
@@ -37,7 +40,7 @@ body{margin:0;font-family:Inter;background:var(--bg)}
   height:180px;
   object-fit:cover;
 }
-.body{padding:16px}
+.card-body{padding:16px}
 .badge{
   display:inline-block;
   padding:6px 12px;
@@ -61,12 +64,15 @@ body{margin:0;font-family:Inter;background:var(--bg)}
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:760px;
+  max-width:780px;
   border-radius:28px;
   overflow:hidden;
   animation:pop .2s ease;
 }
-@keyframes pop{from{transform:scale(.95);opacity:0}to{transform:scale(1);opacity:1}}
+@keyframes pop{
+  from{transform:scale(.96);opacity:0}
+  to{transform:scale(1);opacity:1}
+}
 .modal-img{
   width:100%;
   height:260px;
@@ -82,7 +88,7 @@ body{margin:0;font-family:Inter;background:var(--bg)}
   font-size:14px;
   margin-top:10px;
 }
-.ing strong{white-space:nowrap}
+.ing small{opacity:.6}
 .close{
   position:absolute;
   top:14px;
@@ -104,7 +110,7 @@ body{margin:0;font-family:Inter;background:var(--bg)}
   <div class="modal-box" onclick="event.stopPropagation()">
     <span class="close" onclick="fechar()">✕</span>
     <img id="mFoto" class="modal-img">
-    <div class="modal-body" id="mBody"></div>
+    <div id="mBody" class="modal-body"></div>
   </div>
 </div>
 
@@ -117,16 +123,23 @@ const sb = supabase.createClient(
 const moeda = v =>
   "R$ " + Number(v || 0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-/* LOAD */
-(async()=>{
-  const { data } = await sb
+/* LOAD FICHAS */
+(async ()=>{
+  const { data, error } = await sb
     .from("buffet")
     .select("*")
     .order("created_at",{ascending:false});
 
+  if(error){
+    alert("Erro ao carregar fichas");
+    console.error(error);
+    return;
+  }
+
   data.forEach(renderCard);
 })();
 
+/* CARD */
 function renderCard(f){
   const c = document.createElement("div");
   c.className = "card";
@@ -134,7 +147,7 @@ function renderCard(f){
 
   c.innerHTML = `
     ${f.foto_url ? `<img src="${f.foto_url}">` : ``}
-    <div class="body">
+    <div class="card-body">
       <h3>${f.nome}</h3>
       <span class="badge">${f.tipo}</span>
       <span class="badge">Venda ${moeda(f.preco_venda)}</span>
@@ -144,14 +157,20 @@ function renderCard(f){
   cards.appendChild(c);
 }
 
+/* MODAL */
 async function abrir(f){
   modal.style.display = "flex";
   mFoto.src = f.foto_url || "";
 
-  const { data: itens } = await sb
+  const { data: itens, error } = await sb
     .from("buffet_itens")
     .select("*")
     .eq("buffet_id", f.id);
+
+  if(error){
+    console.error(error);
+    return;
+  }
 
   const cmvTotal = itens.reduce(
     (s,i)=> s + Number(i.custo_calculado || 0), 0
@@ -181,7 +200,7 @@ async function abrir(f){
 
     <hr>
     <div class="lucro ${lucro >= 0 ? "pos":"neg"}">
-      Lucro por receita: ${moeda(lucro)}
+      Lucro da receita: ${moeda(lucro)}
     </div>
   `;
 }
