--- a/analiseficha.html
+++ b/analiseficha.html
@@ -157,49 +157,27 @@ async function abrir(f) {
   modal.style.display = "flex";
   mFoto.src = f.foto_url || "";
 
-  // 1) BUSCA ITENS DA FICHA
-  const { data: itens, error: errItens } = await sb
-    .from("buffet_itens")
-    .select("id, produto_id, quantidade, unidade_uso")
+  // 🔥 AQUI ESTÁ A CORREÇÃO REAL
+  const { data: itens, error } = await sb
+    .from("buffet_produtos")
+    .select("*")
     .eq("buffet_id", f.id);
 
-  if (errItens) {
-    console.error(errItens);
+  if (error) {
+    console.error(error);
     return;
   }
 
-  // 2) BUSCA PRODUTOS (PROTEGIDO)
-  let mapProdutos = {};
-  if (itens.length > 0) {
-    const ids = itens.map(i => i.produto_id).filter(Boolean);
-    if (ids.length > 0) {
-      const { data: produtos, error: errProd } = await sb
-        .from("produtos")
-        .select("id, nome, valor")
-        .in("id", ids);
-
-      if (errProd) {
-        console.error(errProd);
-        return;
-      }
-
-      produtos.forEach(p => (mapProdutos[p.id] = p));
-    }
-  }
-
-  // 3) CMV TOTAL
-  const cmvTotal = itens.reduce((s, i) => {
-    const p = mapProdutos[i.produto_id];
-    if (!p) return s;
-    return s + Number(i.quantidade) * Number(p.valor);
-  }, 0);
+  const cmvTotal = itens.reduce(
+    (s, i) => s + Number(i.custo_calculado || 0),
+    0
+  );
 
   const lucro = (f.preco_venda || 0) - cmvTotal;
 
-  // 4) RENDER DO MODAL
   mBody.innerHTML = `
     <h2>${f.nome}</h2>
-    <p><b>Tipo:</b> ${f.tipo}</p>
+    <p><b>Tipo:</b> ${f.tipo || "-"}</p>
     <p><b>Preço de venda:</b> ${moeda(f.preco_venda)}</p>
     <p><b>CMV total:</b> ${moeda(cmvTotal)}</p>
 
@@ -207,42 +185,19 @@ async function abrir(f) {
     <h3>Ingredientes</h3>
 
     ${
-      itens.filter(i => mapProdutos[i.produto_id]).length === 0
+      itens.length === 0
         ? `<p style="opacity:.6">Nenhum ingrediente vinculado.</p>`
-        : itens
-            .map(i => {
-              const p = mapProdutos[i.produto_id];
-              if (!p) return "";
+        : itens.map(i => `
+            <div class="ing">
+              <span>
+                <b>${i.nome}</b><br>
+                <small>${i.quantidade} ${i.unidade_uso}</small>
+              </span>
 
-              const custo = Number(i.quantidade) * Number(p.valor);
-
-              return `
-                <div class="ing">
-                  <span>
-                    <b>${p.nome}</b><br>
-                    <small>
-                      <input
-                        type="number"
-                        step="0.0001"
-                        value="${i.quantidade}"
-                        onchange="atualizarIngrediente('${i.id}', this.value)"
-                        style="width:80px"
-                      >
-                      ${i.unidade_uso}
-                    </small>
-                  </span>
-
-                  <span>${moeda(p.valor)}</span>
-                  <strong>${moeda(custo)}</strong>
-
-                  <button
-                    style="background:none;border:none;color:#dc2626;font-weight:800;cursor:pointer"
-                    onclick="removerIngrediente('${i.id}')"
-                  >✕</button>
-                </div>
-              `;
-            })
-            .join("")
+              <span>${moeda(i.custo_unitario)}</span>
+              <strong>${moeda(i.custo_calculado)}</strong>
+            </div>
+          `).join("")
     }
 
     <hr>
@@ -255,18 +210,8 @@ async function abrir(f) {
 function fechar() {
   modal.style.display = "none";
 }
-
-async function atualizarIngrediente(id, novaQtd) {
-  await sb.from("buffet_itens").update({ quantidade: novaQtd }).eq("id", id);
-  modal.style.display = "none";
-}
-
-async function removerIngrediente(id) {
-  if (!confirm("Remover ingrediente?")) return;
-  await sb.from("buffet_itens").delete().eq("id", id);
-  modal.style.display = "none";
-}
 </script>
+
 
 
 </body>
